correct alignment issue with pathfinder result table header

--- a/src/features/ResultList/components/ResultList/ResultList.module.scss
+++ b/src/features/ResultList/components/ResultList/ResultList.module.scss
@@ -14,7 +14,7 @@
     padding: $m;
     .resultsTableContainer.pathfinder {
       .tableHead {
-        grid-template-columns: 1fr 112px 110px 90px 24px;
+        grid-template-columns: 1fr 112px 110px 90px 90px 24px;
       }
     }
     .resultsTable {
